<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item1"
        android:title="@string/menu_item_dayin"></item>
    <item
        android:id="@+id/item2"
        android:icon="@mipmap/ic_launcher_foreground"
        android:title="@string/menu_item_new">
        <menu>
            <item
                android:id="@+id/item.new_menu1_item1"
                android:title="@string/menu_item_new_menu1_item1" />
            <item
                android:id="@+id/item.new_menu1_item2"
                android:title="@string/menu_item_new_menu1_item2" />
        </menu>
    </item>
    <item
        android:id="@+id/item3"
        android:title="@string/menu_item_email" />
    <item
        android:id="@+id/item4"
        android:title="@string/menu_item_setting" />
    <item
        android:id="@+id/item5"
        android:title="@string/menu_item_dingyue" />
    <item
        android:id="@+id/item6"
        android:title="@string/menu_item_exit" />
</menu>